JumpScript/tests/baselines/reference/constructorDefaultValuesReferencingThis.errors.txt
tests/cases/conformance/classes/constructorDeclarations/constructorParameters/constructorDefaultValuesReferencingThis.jump(2,21): error TS2333: 'this' cannot be referenced in constructor arguments.
tests/cases/conformance/classes/constructorDeclarations/constructorParameters/constructorDefaultValuesReferencingThis.jump(6,21): error TS2333: 'this' cannot be referenced in constructor arguments.
tests/cases/conformance/classes/constructorDeclarations/constructorParameters/constructorDefaultValuesReferencingThis.jump(10,28): error TS2333: 'this' cannot be referenced in constructor arguments.


==== tests/cases/conformance/classes/constructorDeclarations/constructorParameters/constructorDefaultValuesReferencingThis.jump (3 errors) ====
    class C {
        constructor(x = this) { }
                        ~~~~
!!! error TS2333: 'this' cannot be referenced in constructor arguments.
    }
    
    class D<T> {
        constructor(x = this) { }
                        ~~~~
!!! error TS2333: 'this' cannot be referenced in constructor arguments.
    }
    
    class E<T> {
        constructor(public x = this) { }
                               ~~~~
!!! error TS2333: 'this' cannot be referenced in constructor arguments.
    }